--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "lib": ["es2021"],
+    "lib": ["es2021", "DOM"],
     "module": "CommonJS",
     "rootDir": "./src/",
     "declaration": true,
